--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,18 @@ gradle
 .gradle
 build
 .classes
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+.nb-gradle/
+nb-configuration.xml
+
+
+### Java ###
+*.class
+
