--- a/fidouaf/src/main/webapp/WEB-INF/web.xml
+++ b/fidouaf/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,11 @@
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
  
+ <resource-ref>
+      <description>DB Connection</description>
+      <res-ref-name>jdbc/fidoDB</res-ref-name>
+      <res-type>javax.sql.DataSource</res-type>
+      <res-auth>Container</res-auth>
+  </resource-ref>
+ 
 </web-app>
